[package]
name = "delta-collections"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Data structures with revertable operations called deltas."
readme = "readme.md"
documentation = "https://docs.rs/delta-collections/latest/delta_collections/"
repository = "https://github.com/LighghtEeloo/delta-collections"

[features]
default = ["inline-more"]
inline-more = []

[dependencies]
