[package]
name = "delta-collections"
version = "0.1.5"
edition = "2021"
authors = ["LighghtEeloo <litiaeeloo@gmail.com>"]
license = "MIT"
description = "Data structures with revertable operations called deltas."
readme = "readme.md"
documentation = "https://docs.rs/delta-collections/latest/delta_collections/"
repository = "https://github.com/LighghtEeloo/delta-collections"

[features]
default = ["inline-more", "serde"]
serde = ["dep:serde"]
inline-more = []

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"]}

[dev-dependencies]
serde_json = "1.0"